tools/architecture/validate-source-imports/tests/fixtures/invalid/ui-imports-domain/src/index.ts
import { Domain } from "@platform/domain-core";
export const packageName = "@platform/ui-design-system";
